--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dfyu/refresh-node",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "description": "",
     "author": "dafu yu",
     "bin": {
@@ -12,6 +12,7 @@
     },
     "homepage": "https://github.com/RicholeYu/dfyu/refresh-node",
     "dependencies": {
-        "arg": "^4.1.1"
+        "arg": "^4.1.1",
+        "node-notifier": "^7.0.0"
     }
 }
